--- a/hip/templates/views/reports/related_resource_section.htm
+++ b/hip/templates/views/reports/related_resource_section.htm
@@ -52,7 +52,7 @@
                                                         <a href="#" class="arches-CRUD-child" title="{% trans "View Report" %}">
                                                             {{related_resource.primaryname}}
                                                         </a>
-                                                        <span class="text-muted"><small>{{related_resource.metadata}}</small></span>
+                                                        <span class="text-muted"><small>{{related_resource.relationship}}</small></span>
                                                     </dd> 
                                                     {% empty %}
                                                         <dd class="">
@@ -97,7 +97,7 @@
                                                         <a href="#" class="arches-CRUD-child" title="{% trans "View Report" %}">
                                                             {{related_resource.primaryname}}
                                                         </a>
-                                                        <span class="text-muted"><small>{{related_resource.metadata}}</small></span>
+                                                        <span class="text-muted"><small>{{related_resource.relationship}}</small></span>
                                                     </dd> 
                                                     {% empty %}
                                                         <dd class="">
@@ -141,7 +141,7 @@
                                                         <a href="#" class="arches-CRUD-child" title="{% trans "View Report" %}">
                                                             {{related_resource.primaryname}}
                                                         </a>
-                                                        <span class="text-muted"><small>{{related_resource.metadata}}</small></span>
+                                                        <span class="text-muted"><small>{{related_resource.relationship}}</small></span>
                                                     </dd> 
                                                     {% empty %}
                                                         <dd class="">
@@ -186,7 +186,7 @@
                                                         <a href="#" class="arches-CRUD-child" title="{% trans "View Report" %}">
                                                             {{related_resource.primaryname}}
                                                         </a>
-                                                        <span class="text-muted"><small>{{related_resource.metadata}}</small></span>
+                                                        <span class="text-muted"><small>{{related_resource.relationship}}</small></span>
                                                     </dd> 
                                                     {% empty %}
                                                         <dd class="">
@@ -230,7 +230,7 @@
                                                         <a href="#" class="arches-CRUD-child" title="{% trans "View Report" %}">
                                                             {{related_resource.primaryname}}
                                                         </a>
-                                                        <span class="text-muted"><small>{{related_resource.metadata}}</small></span> 
+                                                        <span class="text-muted"><small>{{related_resource.relationship}}</small></span> 
                                                     </dd> 
                                                     {% empty %}
                                                         <dd class="">
@@ -296,7 +296,7 @@
                                                     <a href="#" class="arches-CRUD-child" title="View Report">
                                                         {{related_resource.primaryname}}
                                                     </a>
-                                                    <span class="text-muted"><small>{{related_resource.metadata}}</small></span> 
+                                                    <span class="text-muted"><small>{{related_resource.relationship}}</small></span> 
                                                 </dd>  
                                                 {% empty %}
                                                     <dd class="">
