--- a/hip/templates/views/reports/related_resource_section.htm
+++ b/hip/templates/views/reports/related_resource_section.htm
@@ -49,7 +49,7 @@
                                             <dl>
                                                 {% for related_resource in related_resource_dict.HERITAGE_RESOURCE %}
                                                     <dd class="arches-report-content">
-                                                        <a href="#" class="arches-CRUD-child" title="{% trans "View Report" %}">
+                                                        <a href="{% url 'report' related_resource.entityid %}" class="arches-CRUD-child" title="{% trans "View Report" %}">
                                                             {{related_resource.primaryname}}
                                                         </a>
                                                         <span class="text-muted"><small>{{related_resource.relationship}}</small></span>
@@ -94,7 +94,7 @@
                                             <dl>                               
                                                 {% for related_resource in related_resource_dict.HERITAGE_RESOURCE_GROUP %}
                                                     <dd class="arches-report-content">
-                                                        <a href="#" class="arches-CRUD-child" title="{% trans "View Report" %}">
+                                                        <a href="{% url 'report' related_resource.entityid %}" class="arches-CRUD-child" title="{% trans "View Report" %}">
                                                             {{related_resource.primaryname}}
                                                         </a>
                                                         <span class="text-muted"><small>{{related_resource.relationship}}</small></span>
@@ -138,7 +138,7 @@
                                             <dl>                               
                                                 {% for related_resource in related_resource_dict.ACTIVITY %}
                                                     <dd class="arches-report-content">
-                                                        <a href="#" class="arches-CRUD-child" title="{% trans "View Report" %}">
+                                                        <a href="{% url 'report' related_resource.entityid %}" class="arches-CRUD-child" title="{% trans "View Report" %}">
                                                             {{related_resource.primaryname}}
                                                         </a>
                                                         <span class="text-muted"><small>{{related_resource.relationship}}</small></span>
@@ -183,7 +183,7 @@
                                             <dl>
                                                 {% for related_resource in related_resource_dict.HISTORICAL_EVENT %}
                                                     <dd class="arches-report-content">
-                                                        <a href="#" class="arches-CRUD-child" title="{% trans "View Report" %}">
+                                                        <a href="{% url 'report' related_resource.entityid %}" class="arches-CRUD-child" title="{% trans "View Report" %}">
                                                             {{related_resource.primaryname}}
                                                         </a>
                                                         <span class="text-muted"><small>{{related_resource.relationship}}</small></span>
@@ -227,7 +227,7 @@
                                             <dl> 
                                                 {% for related_resource in related_resource_dict.ACTOR %}
                                                     <dd class="arches-report-content">
-                                                        <a href="#" class="arches-CRUD-child" title="{% trans "View Report" %}">
+                                                        <a href="{% url 'report' related_resource.entityid %}" class="arches-CRUD-child" title="{% trans "View Report" %}">
                                                             {{related_resource.primaryname}}
                                                         </a>
                                                         <span class="text-muted"><small>{{related_resource.relationship}}</small></span> 
@@ -272,7 +272,7 @@
                                             {% for related_resource in related_resource_dict.INFORMATION_RESOURCE_IMAGE %}
                                                 <div class="col-md-6 shadow-wrapper">
                                                     <div class="box-shadow shadow-effect-2">
-                                                        <a href="#" class="arches-CRUD-child" title="{% trans "View Report" %}">
+                                                        <a href="{% url 'report' related_resource.entityid %}" class="arches-CRUD-child" title="{% trans "View Report" %}">
                                                             <img style="width: 100%;" src="{{related_resource.file_path}}" data-img="img/superbox/superbox-full-2.jpg" alt="{{related_resource.primaryname}}" class="superbox-img img-bordered">
                                                         </a>
                                                     </div>
@@ -293,7 +293,7 @@
                                                 <dt class="arches-report-header">{% trans "Documents" %}</dt>
                                                 {% for related_resource in related_resource_dict.INFORMATION_RESOURCE_DOCUMENT %}
                                                 <dd class="arches-report-content">
-                                                    <a href="#" class="arches-CRUD-child" title="View Report">
+                                                    <a href="{% url 'report' related_resource.entityid %}" class="arches-CRUD-child" title="View Report">
                                                         {{related_resource.primaryname}}
                                                     </a>
                                                     <span class="text-muted"><small>{{related_resource.relationship}}</small></span> 
