Update vector styling on resource reports, small tweaks to report templates

--- a/hip/media/css/reports.css
+++ b/hip/media/css/reports.css
@@ -57,6 +57,10 @@
 	color: #888;
 }
 
+.arches-report-image-thumbnail {
+	margin-bottom: 20px;
+}
+
 .arches-report-group-spacer {
 	margin-bottom: 9px;
 }
