--- a/hip/templates/views/reports/sections/DESCRIPTION_OF_LOCATION.E62.htm
+++ b/hip/templates/views/reports/sections/DESCRIPTION_OF_LOCATION.E62.htm
@@ -18,9 +18,15 @@
                         </dd>
                     {% else %}
                         {% for PLACE_SITE_LOCATION_E53 in PLACE_E53.PLACE_SITE_LOCATION_E53 %}
-                            <dd class="arches-report-subsection-item">
-                                {{PLACE_SITE_LOCATION_E53.DESCRITPION_OF_LOCATION_E62__value}}
-                            </dd>
+                            {% if 'DESCRIPTION_OF_LOCATION_E62__value' not in PLACE_SITE_LOCATION_E53 %}
+                                <dd class="arches-report-subsection-item">
+                                    {% trans "No descriptions recorded" %}
+                                </dd>
+                            {% else %}
+                                <dd class="arches-report-subsection-item">
+                                    {{PLACE_SITE_LOCATION_E53.DESCRIPTION_OF_LOCATION_E62__value}}
+                                </dd>
+                            {% endif %}
                         {% endfor %}                      
                     {% endif %}
                 {% endfor %}              
