--- a/hip/templates/views/reports/sections/KEYWORD.E55.htm
+++ b/hip/templates/views/reports/sections/KEYWORD.E55.htm
@@ -8,7 +8,7 @@
 
             {% if 'KEYWORD_E55' not in report_info.source.graph %}
                 <dd class="arches-report-subsection-item">
-                    {% trans "No names recorded" %}
+                    {% trans "No keywords recorded" %}
                 </dd>
             {% else %}
                 {% for KEYWORD_E55 in report_info.source.graph.KEYWORD_E55 %}
