--- a/hip/templates/views/reports/sections/PLACE_APPELLATION_CADASTRAL_REFERENCE.E44.htm
+++ b/hip/templates/views/reports/sections/PLACE_APPELLATION_CADASTRAL_REFERENCE.E44.htm
@@ -18,14 +18,22 @@
                         </dd>
                     {% else %}
                         {% for PLACE_CADASTRAL_REFERENCE_E53 in PLACE_E53.PLACE_CADASTRAL_REFERENCE_E53 %}
-                            {% if 'PLACE_THIS_LAND_PARCEL_E53' not in PLACE_THIS_LAND_PARCEL_E53 %}
+                            {% if 'PLACE_THIS_LAND_PARCEL_E53' not in PLACE_CADASTRAL_REFERENCE_E53 %}
                                 <dd class="arches-report-subsection-item">
                                     {% trans "No parcels recorded" %}
                                 </dd>
                             {% else %}
                                 {% for PLACE_THIS_LAND_PARCEL_E53 in PLACE_CADASTRAL_REFERENCE_E53.PLACE_THIS_LAND_PARCEL_E53 %}
-                                    <dd class="arches-report-subsection-item">{{PLACE_THIS_LAND_PARCEL_E53.PLACE_APPELLATION_CADASTRAL_REFERENCE_E44__value}}</dd>
-                                {% endfor %}                              
+                                    {% if 'PLACE_APPELLATION_CADASTRAL_REFERENCE_E44' not in PLACE_THIS_LAND_PARCEL_E53 %}
+                                        <dd class="arches-report-subsection-item">
+                                            {% trans "No parcels recorded" %}
+                                        </dd>
+                                    {% else %}
+                                        {% for PLACE_APPELLATION_CADASTRAL_REFERENCE_E44 in PLACE_THIS_LAND_PARCEL_E53.PLACE_APPELLATION_CADASTRAL_REFERENCE_E44 %}
+                                            <dd class="arches-report-subsection-item">{{PLACE_APPELLATION_CADASTRAL_REFERENCE_E44.PLACE_APPELLATION_CADASTRAL_REFERENCE_E44__value}}</dd>
+                                        {% endfor %}                              
+                                    {% endif %}
+                                {% endfor %}                             
                             {% endif %}
                         {% endfor %}                    
                     {% endif %}
