--- a/hip/templates/views/reports/sections/important_dates.htm
+++ b/hip/templates/views/reports/sections/important_dates.htm
@@ -14,7 +14,9 @@
                 <dd class="arches-report-subsection-item">
                 {% for BEGINNING_OF_EXISTENCE_E63 in report_info.source.graph.BEGINNING_OF_EXISTENCE_E63 %}
                     {% for BEGINNING_OF_EXISTENCE_TIME___SPAN_E52 in BEGINNING_OF_EXISTENCE_E63.BEGINNING_OF_EXISTENCE_TIME___SPAN_E52 %}
-                        {{BEGINNING_OF_EXISTENCE_TIME___SPAN_E52.START_DATE_OF_EXISTENCE_E49__value}}
+                        {% for START_DATE_OF_EXISTENCE_E49 in BEGINNING_OF_EXISTENCE_TIME___SPAN_E52.START_DATE_OF_EXISTENCE_E49 %}
+                            {{START_DATE_OF_EXISTENCE_E49.START_DATE_OF_EXISTENCE_E49__value}}
+                        {% endfor %}  
                     {% endfor %}  
                     {% for BEGINNING_OF_EXISTENCE_TYPE_E55 in BEGINNING_OF_EXISTENCE_E63.BEGINNING_OF_EXISTENCE_TYPE_E55 %}
                         <span class="arches-report-subsection-item-type">({{BEGINNING_OF_EXISTENCE_TYPE_E55.BEGINNING_OF_EXISTENCE_TYPE_E55__value}})</span> 
@@ -25,7 +27,9 @@
                 <dd class="arches-report-subsection-item">
                 {% for END_OF_EXISTENCE_E64 in report_info.source.graph.END_OF_EXISTENCE_E64 %}
                     {% for END_OF_EXISTENCE_TIME___SPAN_E52 in END_OF_EXISTENCE_E64.END_OF_EXISTENCE_TIME___SPAN_E52 %}
-                        {{END_OF_EXISTENCE_TIME___SPAN_E52.START_DATE_OF_EXISTENCE_E49__value}}
+                        {% for END_DATE_OF_EXISTENCE_E49 in END_OF_EXISTENCE_TIME___SPAN_E52.END_DATE_OF_EXISTENCE_E49 %}
+                            {{END_DATE_OF_EXISTENCE_E49.END_DATE_OF_EXISTENCE_E49__value}}
+                        {% endfor %}  
                     {% endfor %}  
                     {% for END_OF_EXISTENCE_TYPE_E55 in END_OF_EXISTENCE_E64.END_OF_EXISTENCE_TYPE_E55 %}
                         <span class="arches-report-subsection-item-type">({{END_OF_EXISTENCE_TYPE_E55.END_OF_EXISTENCE_TYPE_E55__value}})</span> 
